Fixes squashed hero image

--- a/src/_includes/less/global.less
+++ b/src/_includes/less/global.less
@@ -20,6 +20,7 @@
 @import 'objects/_block.less';
 @import 'objects/_icon.less';
 
+.clear { clear: both; }
 
 //  To extend the styling of these objects, create a folder called
 //  styles to store the less files and import below under the
