--- a/src/_includes/less/styles/_grid.less
+++ b/src/_includes/less/styles/_grid.less
@@ -54,6 +54,10 @@ body {
   flex-wrap: wrap;
 }
 
+.hero__content {
+  display: block
+}
+
 .grid {
   // 1. Flexbox fallback
   float: left;  // 1.
